--- a/index.css
+++ b/index.css
@@ -54,4 +54,23 @@
   font-family: "Bebas Neue", cursive;
   letter-spacing: 2px;
 }
+
+@media only screen and (max-width: 600px) {
+  .info-h1 {
+    font-size: 1em;
+  }
+  .info p {
+    font-size: 2rem;
+    padding: 30px 0;
+  }
+  .if {
+    font-size: 1em;
+    text-align: center;
+    bottom: 6em;
+  }
+  .content {
+    width: 80vw;
+    top: 40%;
+  }
+}
 /*# sourceMappingURL=index.css.map */
